--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.542.0",
-    "next": "^15.5.2",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^19.2.3",
     "react-day-picker": "^9.9.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
