--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.26",
@@ -45,7 +46,7 @@
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.3",
-    "react-day-picker": "^9.9.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
